Fix the dark mode colors

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 @layer base {
   body {
     @apply m-0 p-0 min-h-screen flex flex-col text-[#333];
@@ -16,6 +17,9 @@
 @layer components {
 header {
   @apply flex flex-col items-center border-t-20 border-[#60B8DE] pt-6;
+}
+.card {
+  @apply  p-4 rounded-lg shadow-md border-2 transition-all duration-300 bg-gray-50 border-gray-300;
 }
 .open-cards {
   @apply flex flex-col items-center;
@@ -40,9 +44,16 @@ header {
 .dark-mode .nav-bar a{
 @apply hover:!bg-[#60B8DE];
 }
+.dark-mode .card a, .dark-mode .card p {
+  @apply bg-black !text-white;
+}
+.dark-mode .card {
+    @apply bg-black !text-white border-gray-500;
+}
 .dark-mode .contributor-name{
   @apply !text-[#60B8DE];
 }
+
 .dark-mode .closed-cards {
   @apply shadow-lg shadow-sky-500/100;
 }
